--- a/index.html
+++ b/index.html
@@ -943,6 +943,9 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
+    <script src="movies.js"></script>
+    <script src="tv.js"></script>
+    <script src="anime.js"></script>
 </body>
 </html>
